--- a/color.scss
+++ b/color.scss
@@ -3,6 +3,8 @@ display:flex;
 flex-direction: row;
 max-width: 60%;
 flex-wrap: wrap;
+border: 1px solid #5e1f73;
+box-shadow: 4px 3px;
 }
 .child{
 border: 1px solid black;
